--- a/Source/ExcelDna.CustomRegistration/ExcelDna.CustomRegistration.csproj
+++ b/Source/ExcelDna.CustomRegistration/ExcelDna.CustomRegistration.csproj
@@ -45,11 +45,10 @@
   <ItemGroup>
     <Compile Include="AsyncRegistration.cs" />
     <Compile Include="Attributes.cs" />
-    <Compile Include="ParameterTypeConversion.cs" />
     <Compile Include="ParamsRegistration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registration.cs" />
-    <Compile Include="RegistrationEntry.cs" />
+    <Compile Include="ExcelFunctionRegistration.cs" />
     <Compile Include="Utils\AsyncTaskUtil.cs" />
     <Compile Include="Utils\Disposables.cs" />
     <Compile Include="Utils\NativeAsyncTaskUtil.cs" />
