Add Optional / Nullable Parameter Conversions
Add an Initial implementation of parameter conversions, including
Optional and Nullable types, and type conversions for parameters and
return types.

--- a/Source/ExcelDna.CustomRegistration/ExcelDna.CustomRegistration.csproj
+++ b/Source/ExcelDna.CustomRegistration/ExcelDna.CustomRegistration.csproj
@@ -45,6 +45,10 @@
   <ItemGroup>
     <Compile Include="AsyncRegistration.cs" />
     <Compile Include="Attributes.cs" />
+    <Compile Include="ParameterConversionRegistration.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="ParameterConversions.cs" />
     <Compile Include="ParamsRegistration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registration.cs" />
