Add type conversions to nullable and optional

--- a/Source/ExcelDna.CustomRegistration.FSharp/ExcelDna.CustomRegistration.FSharp.fsproj
+++ b/Source/ExcelDna.CustomRegistration.FSharp/ExcelDna.CustomRegistration.FSharp.fsproj
@@ -33,7 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ExcelDna.Integration">
-      <HintPath>..\Libraries\ExcelDna.Integration.dll</HintPath>
+      <HintPath>..\packages\Excel-DNA.0.32.0-rc3\lib\ExcelDna.Integration.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="FSharp.Core, Version=4.3.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
