Add F# optional parameters and VB example

--- a/Source/ExcelDna.CustomRegistration.FSharp/ExcelDna.CustomRegistration.FSharp.fsproj
+++ b/Source/ExcelDna.CustomRegistration.FSharp/ExcelDna.CustomRegistration.FSharp.fsproj
@@ -47,6 +47,7 @@
     <Compile Include="FsAsyncUtil.fs" />
     <Compile Include="AsyncRegistration.fs" />
     <Compile Include="Registration.fs" />
+    <Compile Include="FsParameterConversions.fs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ExcelDna.CustomRegistration\ExcelDna.CustomRegistration.csproj">
