First implementation of MethodExecutionHandlers
Add support for method function execution wrappers allowing OnEntry,
OnSuccess, OnException and OnExit interception.

--- a/Source/ExcelDna.CustomRegistration.Example/ExcelDna.CustomRegistration.Example.csproj
+++ b/Source/ExcelDna.CustomRegistration.Example/ExcelDna.CustomRegistration.Example.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="ExampleAddIn.cs" />
     <Compile Include="AsyncFunctionExamples.cs" />
+    <Compile Include="MethodLoggingHandler.cs" />
     <Compile Include="ParameterConversionExamples.cs" />
     <Compile Include="ParamsFunctionExamples.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
