--- a/Source/ExcelDna.CustomRegistration.Example/ExcelDna.CustomRegistration.Example.csproj
+++ b/Source/ExcelDna.CustomRegistration.Example/ExcelDna.CustomRegistration.Example.csproj
@@ -47,7 +47,7 @@
   <ItemGroup>
     <Compile Include="ExampleAddIn.cs" />
     <Compile Include="AsyncFunctionExamples.cs" />
-    <Compile Include="MethodLoggingHandler.cs" />
+    <Compile Include="FunctionLoggingHandler.cs" />
     <Compile Include="ParameterConversionExamples.cs" />
     <Compile Include="ParamsFunctionExamples.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
