--- a/Source/ExcelDna.CustomRegistration.FSharp/ExcelDna.CustomRegistration.FSharp.fsproj
+++ b/Source/ExcelDna.CustomRegistration.FSharp/ExcelDna.CustomRegistration.FSharp.fsproj
@@ -45,7 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FsAsyncUtil.fs" />
-    <Compile Include="AsyncRegistration.fs" />
+    <Compile Include="FsAsyncRegistration.fs" />
     <Compile Include="Registration.fs" />
   </ItemGroup>
   <ItemGroup>
