Fix Range conversions for VBA compatibility

--- a/Source/ExcelDna.CustomRegistration.VBExample/ExcelDna.CustomRegistration.VBExample.vbproj
+++ b/Source/ExcelDna.CustomRegistration.VBExample/ExcelDna.CustomRegistration.VBExample.vbproj
@@ -99,6 +99,7 @@
     </Compile>
     <Compile Include="OptionalExamples.vb" />
     <Compile Include="ParamsExamples.vb" />
+    <Compile Include="RangeParameterExamples.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
