--- a/Source/ExcelDna.CustomRegistration.VBExample/ExcelDna.CustomRegistration.VBExample.vbproj
+++ b/Source/ExcelDna.CustomRegistration.VBExample/ExcelDna.CustomRegistration.VBExample.vbproj
@@ -81,6 +81,7 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandExamples.vb" />
     <Compile Include="ExampleAddIn.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
